// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Item should render navigation item for ERROR workspace correctly 1`] = `
<li
  className="pf-c-nav__item"
  data-ouia-component-id="OUIA-Generated-NavItem-5"
  data-ouia-component-type="PF4/NavItem"
  data-ouia-safe={true}
>
  <a
    aria-current={null}
    className="pf-c-nav__link"
    data-testid="/namespace/workspace"
    onClick={[Function]}
  >
    <span
      data-testid="recent-workspace-item"
    >
      <div>
        Dummy Workspace Indicator
      </div>
      workspace
    </span>
    <div
      className="pf-c-dropdown pf-m-align-right pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-Dropdown-5"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe={true}
      onClick={[Function]}
    >
      <button
        aria-expanded={true}
        aria-haspopup={true}
        aria-label="Actions"
        className="pf-c-dropdown__toggle pf-m-plain"
        disabled={false}
        id="pf-dropdown-toggle-id-4"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 192 512"
          width="1em"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="pf-dropdown-toggle-id-4"
        autoFocus={false}
        className="pf-c-dropdown__menu pf-m-align-right"
        hidden={false}
        role="menu"
      >
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-9"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Stop Workspace
            </div>
          </a>
        </li>
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-10"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Edit Workspace
            </div>
          </a>
        </li>
      </ul>
    </div>
  </a>
</li>
`;

exports[`Navigation Item should render navigation item for RUNNING workspace correctly 1`] = `
<li
  className="pf-c-nav__item"
  data-ouia-component-id="OUIA-Generated-NavItem-3"
  data-ouia-component-type="PF4/NavItem"
  data-ouia-safe={true}
>
  <a
    aria-current={null}
    className="pf-c-nav__link"
    data-testid="/namespace/workspace"
    onClick={[Function]}
  >
    <span
      data-testid="recent-workspace-item"
    >
      <div>
        Dummy Workspace Indicator
      </div>
      workspace
    </span>
    <div
      className="pf-c-dropdown pf-m-align-right pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-Dropdown-3"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe={true}
      onClick={[Function]}
    >
      <button
        aria-expanded={true}
        aria-haspopup={true}
        aria-label="Actions"
        className="pf-c-dropdown__toggle pf-m-plain"
        disabled={false}
        id="pf-dropdown-toggle-id-2"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 192 512"
          width="1em"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="pf-dropdown-toggle-id-2"
        autoFocus={false}
        className="pf-c-dropdown__menu pf-m-align-right"
        hidden={false}
        role="menu"
      >
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-6"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Stop Workspace
            </div>
          </a>
        </li>
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-7"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Edit Workspace
            </div>
          </a>
        </li>
      </ul>
    </div>
  </a>
</li>
`;

exports[`Navigation Item should render navigation item for STARTING workspace correctly 1`] = `
<li
  className="pf-c-nav__item"
  data-ouia-component-id="OUIA-Generated-NavItem-2"
  data-ouia-component-type="PF4/NavItem"
  data-ouia-safe={true}
>
  <a
    aria-current={null}
    className="pf-c-nav__link"
    data-testid="/namespace/workspace"
    onClick={[Function]}
  >
    <span
      data-testid="recent-workspace-item"
    >
      <div>
        Dummy Workspace Indicator
      </div>
      workspace
    </span>
    <div
      className="pf-c-dropdown pf-m-align-right pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-Dropdown-2"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe={true}
      onClick={[Function]}
    >
      <button
        aria-expanded={true}
        aria-haspopup={true}
        aria-label="Actions"
        className="pf-c-dropdown__toggle pf-m-plain"
        disabled={false}
        id="pf-dropdown-toggle-id-1"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 192 512"
          width="1em"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="pf-dropdown-toggle-id-1"
        autoFocus={false}
        className="pf-c-dropdown__menu pf-m-align-right"
        hidden={false}
        role="menu"
      >
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-4"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Stop Workspace
            </div>
          </a>
        </li>
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-5"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Edit Workspace
            </div>
          </a>
        </li>
      </ul>
    </div>
  </a>
</li>
`;

exports[`Navigation Item should render navigation item for STOPPED workspace correctly 1`] = `
<li
  className="pf-c-nav__item"
  data-ouia-component-id="OUIA-Generated-NavItem-1"
  data-ouia-component-type="PF4/NavItem"
  data-ouia-safe={true}
>
  <a
    aria-current={null}
    className="pf-c-nav__link"
    data-testid="/namespace/workspace"
    onClick={[Function]}
  >
    <span
      data-testid="recent-workspace-item"
    >
      <div>
        Dummy Workspace Indicator
      </div>
      workspace
    </span>
    <div
      className="pf-c-dropdown pf-m-align-right pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-Dropdown-1"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe={true}
      onClick={[Function]}
    >
      <button
        aria-expanded={true}
        aria-haspopup={true}
        aria-label="Actions"
        className="pf-c-dropdown__toggle pf-m-plain"
        disabled={false}
        id="pf-dropdown-toggle-id-0"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 192 512"
          width="1em"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="pf-dropdown-toggle-id-0"
        autoFocus={false}
        className="pf-c-dropdown__menu pf-m-align-right"
        hidden={false}
        role="menu"
      >
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-1"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Open in verbose mode
            </div>
          </a>
        </li>
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-2"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Start in background
            </div>
          </a>
        </li>
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-3"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Edit Workspace
            </div>
          </a>
        </li>
      </ul>
    </div>
  </a>
</li>
`;

exports[`Navigation Item should render navigation item for STOPPING workspace correctly 1`] = `
<li
  className="pf-c-nav__item"
  data-ouia-component-id="OUIA-Generated-NavItem-4"
  data-ouia-component-type="PF4/NavItem"
  data-ouia-safe={true}
>
  <a
    aria-current={null}
    className="pf-c-nav__link"
    data-testid="/namespace/workspace"
    onClick={[Function]}
  >
    <span
      data-testid="recent-workspace-item"
    >
      <div>
        Dummy Workspace Indicator
      </div>
      workspace
    </span>
    <div
      className="pf-c-dropdown pf-m-align-right pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-Dropdown-4"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe={true}
      onClick={[Function]}
    >
      <button
        aria-expanded={true}
        aria-haspopup={true}
        aria-label="Actions"
        className="pf-c-dropdown__toggle pf-m-plain"
        disabled={false}
        id="pf-dropdown-toggle-id-3"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 192 512"
          width="1em"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="pf-dropdown-toggle-id-3"
        autoFocus={false}
        className="pf-c-dropdown__menu pf-m-align-right"
        hidden={false}
        role="menu"
      >
        <li
          className={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
        >
          <a
            aria-disabled={false}
            className="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-8"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe={true}
            tabIndex={-1}
          >
            <div>
              Edit Workspace
            </div>
          </a>
        </li>
      </ul>
    </div>
  </a>
</li>
`;
